# zforge

./: .gitignore  CHANGELOG.md  CODE_INDEX.md  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml  requirements.txt
cli/: __init__.py  _config.py  _console.py  _constants.py  apol.py  auth.py  builder.py  fixer.py  main.py  publisher.py  runner.py  scaffold.py  tester.py  validator.py
cli/scripts/: 02_run_experiment.py  test_runner.py
scripts/: release.py
templates/: SkillTest.md  skill.json
