[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zforge"
version = "1.0.4"
description = "ZeroForge Skill Development CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
zforge = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]  

[project.optional-dependencies]
dev = ["pytest>=7.0"]
