[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zforge"
version = "2.1.4"
description = "Official CLI for building, validating, and publishing Agent Zero skills to the ZeroForge marketplace"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "colin-charles", email = "hello@zero-forge.org"}
]
keywords = ["agent-zero", "agentZero", "skills", "ai", "cli", "marketplace", "zeroforge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://zero-forge.org"
Repository = "https://github.com/colin-charles/zforge"
Documentation = "https://zero-forge.org/start"
"Bug Tracker" = "https://github.com/colin-charles/zforge/issues"

[project.scripts]
zforge = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
